@@ -20,6 +20,7 @@ requires: [git, railsapps,
   rails_devise_pundit,
   rails_signup_download,
   rails_mailinglist_activejob,
+  rails_stripe_checkout,
   setup, locale, readme, gems,
   tests,
   email,
